--- a/Warbler_app/warbler-client/package.json
+++ b/Warbler_app/warbler-client/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^2.1.8",
+    "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
   "proxy": "http://localhost:8081",
